著作権を考慮し画像変更＆ファイル名整理

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="format-detection" content="telephone=no,address=no,email=no">
 	<title>初代ポケモンバトル</title>
-	<link rel='stylesheet' type='text/css' href='E17C2002lesson15.css' type='text/css'>
-	<script language='javascript' type='text/javascript' src='E17C2002lesson15.js'></script>
+	<link rel='stylesheet' type='text/css' href='common.css' type='text/css'>
+	<script language='javascript' type='text/javascript' src='common.js'></script>
 </head>
 
 <body>
