--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no,address=no,email=no">
-	<title>初代ポケモンバトル</title>
+	<title>初代ポ〇モンバトル</title>
 	<link rel='stylesheet' type='text/css' href='common.css' type='text/css'>
 	<script language='javascript' type='text/javascript' src='common.js'></script>
 </head>
 
 <body>
-	<h1>初代ポケモンバトル</h1>
+	<h1>初代ポ〇モンバトル</h1>
 	<div class="border">
-		<div class="box1" id=enemy>
+		<div class="box1" id="enemy" >
 			<div class="left">
 				たつべえ：Lv50
 				<br> HP:
 				<meter id="enemyDamaged" value="100" min="0" max="100"></meter>
-				<div id=HPgageE></div>
+				<div id="HPgageE"></div>
 			</div>
 		</div>
-		<div class="box2" id=ally>
+		<div class="box2" id="ally" >
 			<div class="right">
 				ねこはち：Lv50
 				<br> HP:
 				<meter id="allyDamaged" value="100" min="0" max="100"></meter>
-				<div id=HPgageA></div>
+				<div id="HPgageA"></div>
 			</div>
 		</div>
 		<div class="box3">
-			<p id=message1></p>
-			<p id=message2></p>
+			<p id="message1"></p>
+			<p id="message2"></p>
 		</div>
 	</div>
 	<p>
